fixed gapped for now and changed the color of text in dropdown

--- a/src/App.scss
+++ b/src/App.scss
@@ -278,6 +278,7 @@ select.form-control {
       height: 12%;
       font-size: 1.2rem;
       padding: 0 2rem;
+      color: #18A0FB;
       display: flex;
       align-items: center;
       justify-content: space-between;
